repo_artifact_dir/part3/3.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-data-pvc
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        # Writer container - generates and writes logs
        - name: writer
          image: captainlevi20/log-output-writer:1.1
          imagePullPolicy: Always
          command:
            - "/bin/sh"
            - "-c"
            - "cat /etc/config/information.txt || true; echo \"$MESSAGE\" || true; exec npm start"
          volumeMounts:
            - name: shared-storage
              mountPath: /shared
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
        
        # Reader container - serves logs over HTTP
        - name: reader
          image: captainlevi20/log-output-reader:1.0
          imagePullPolicy: Always
          command:
            - "/bin/sh"
            - "-c"
            - "cat /etc/config/information.txt || true; echo \"$MESSAGE\" || true; exec npm start"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /shared
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
